Fix: solve most IGB layout issues.
Chromium 3.0 doesn't know about <section>, <header> or <nav> and needs
to be told they are block elements.

--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -41,6 +41,10 @@ html, body {
 	background-color: $main-bg-color;
 }
 
+section, header, nav {
+	display: block;
+}
+
 div#wrapper {
 	min-height: 100%;
 	height: auto !important;
